--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 /vendor
 /node_modules
 .env
+.idea/.name
+.idea/workspace.xml
+.idea/scopes/scope_settings.xml
+.idea/vcs.xml
+.idea/misc.xml
+.idea/encodings.xml
+.idea/PMS.iml
+.idea/modules.xml
